# colleen

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: build.yml  ci.yml  tests.yml
build-process/: build-tests.sh  build.sh  run-tests.sh
cmake/: googletest-download.cmake
config_generator/: colleen.cmake  config_generator.py  run-config-generator.sh
config_generator/generators/: cpp_generator.py
example/: CMakeLists.txt  config.json
example/configuration/: example_options.json  example_options_1.json
example/source/colleen/example/: main.cpp
include/: arguments.h  colleen.h
include/colleen/: argument.h  argument_registry.h  colleen.h  common.h  logging.h  node.h
include/colleen/_impl/: base_node.h  exceptions.h  registry.h
source/: arguments.cpp  colleen.cpp
source/colleen/: argument.cpp  colleen.cpp  logging.cpp
source/colleen/_impl/: base_node.cpp  registry.cpp
test/: CMakeLists.txt
test/configuration/: test_options.json
test/include/colleen/test/: unit_colleen.h
test/source/: colleen_test.cpp  main.cpp  main_tests.cpp
test/source/colleen/test/: unit_colleen.cpp  unit_colleen_T.cpp
